unpackaged/main/default/objects/pw_ccpro__ZipCode__c/pw_ccpro__ZipCode__c.object-meta.xml
<CustomObject>
    <label>ZIP Code</label>
    <nameField>
        <label>ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZIP Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>