unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__Counties__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Counties__c</fullName>
    <inlineHelpText>If this ZIP crosses county lines then this field contains a comma separated list of counties, otherwise it stores just a single county</inlineHelpText>
    <label>Counties</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>