unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__CountyQty__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__CountyQty__c</fullName>
    <label>County Qty</label>
    <summaryForeignKey>pw_ccpro__ZipCodeCounty__c.pw_ccpro__ZipCodeId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>