unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__CSA__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__CSA__c</fullName>
    <inlineHelpText>Core Statistical Area. This area is a group of MSA&#39;s combined into a population core area.</inlineHelpText>
    <label>CSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>