unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>