unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__LocationType__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__LocationType__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptable</fullName>
                <default>true</default>
                <label>Acceptable</label>
            </value>
            <value>
                <fullName>Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>