unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__PMSA__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__PMSA__c</fullName>
    <inlineHelpText>Primary Metropolitan Statistical Area Number.</inlineHelpText>
    <label>PMSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>