unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__State__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__State__c</fullName>
    <label>State</label>
    <referenceTo>pw_ccpro__State__c</referenceTo>
    <relationshipName>Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>