unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__TimeZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The time zone this Zip Code covers (where data is available)</inlineHelpText>
    <label>Time Zone</label>
    <referenceTo>pw_ccpro__TimeZone__c</referenceTo>
    <relationshipLabel>ZIP Codes</relationshipLabel>
    <relationshipName>ZipCodes</relationshipName>
    <type>Lookup</type>
</CustomField>