unpackaged/main/default/objects/pw_ccpro__ZipCode__c/fields/pw_ccpro__ZipCodeType__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ZipCodeType__c</fullName>
    <label>ZIP Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>PO BOX</fullName>
            </value>
            <value>
                <fullName>Unique</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>