unpackaged/main/default/objects/pw_ccpro__ZipCode__c/listViews/pw_ccpro__All.listView-meta.xml
<ListView>
    <fullName>pw_ccpro__All</fullName>
    <columns>NAME</columns>
    <columns>pw_ccpro__City__c</columns>
    <columns>pw_ccpro__State__c</columns>
    <columns>pw_ccpro__ZipCodeType__c</columns>
    <columns>pw_ccpro__LocationType__c</columns>
    <columns>pw_ccpro__TimeZone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>